docs: update endpoint documentation using swagger
